# rank-torrent-name

./: .coveragerc  .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  pytest.ini  rtn.py  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: ---bug-report.yml  ---feature-request.yml  ---maintainers.yml  config.yml
.github/workflows/: battery.yml  codeql.yml  dependabot.yml  docs.yml  publish.yml
RTN/: __init__.py  cli.py  exceptions.py  extras.py  fetch.py  file_parser.py  models.py  parser.py  patterns.py  ranker.py
benchmarks/: rank.py
contributing/: index.html
devs/extras/: index.html
devs/introduction/: index.html
devs/models/: index.html
devs/modules/exceptions/: index.html
devs/modules/extras/: index.html
devs/modules/fetch/: index.html
devs/modules/models/: index.html
devs/modules/parser/: index.html
devs/modules/patterns/: index.html
devs/modules/ranker/: index.html
devs/parsing/: index.html
devs/ranking/: index.html
devs/settings/: index.html
devs/sorting/: index.html
docs/: contributing.md  index.md  license.md
docs/Developers/: Extras.md  Introduction.md  Parsing.md  Ranking.md  Settings.md  Sorting Torrents.md
docs/Developers/Modules/: exceptions.md  extras.md
docs/devs/: models.md  settings.md
docs/devs/modules/: fetch.md  models.md  parser.md  patterns.md  ranker.md
docs/stylesheets/: extra.css
docs/users/: faq.md  languages.md  profiles.md
javascripts/: extra.js
license/: index.html
search/: search_index.json
tests/: __init__.py  test_fetch.py  test_file_parser.py  test_main.py  test_parser.py  test_ranker.py  test_scraper.py  test_settings.py
users/faq/: index.html
users/languages/: index.html
users/profiles/: index.html
