[tool.poetry]
name = "rank-torrent-name"
version = "0.2.18"
description = "Parse Torrents using PTN and Rank them according to your preferences!"
authors = ["Spoked <dreu.lavelle@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dreulavelle/rank-torrent-name"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.3"
parse-torrent-title = "^2.8.1"
regex = "^2023.12.25"
levenshtein = "^0.25.0"
parsett = "^0.2.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.3"
pyright = "^1.1.352"
pyperf = "^2.2.0"
ruff = "^0.3.0"
isort = "^5.10.1"
codecov = "^2.1.13"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "RTN"

[tool.isort]
profile = "black"

[tool.black]
line-length = 129
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests
)/
'''

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
ignore = [
  "PLR0913", # flask8-bugbear: Too many arguments for a method or function
  "PLR0911", # flask8-bugbear: Too many return statements
  "PLR2004", # flake8-bugbear: Magic value used in comparison
  "S104", # flake8-bandit: Possible binding to all interfaces
  "S108", # flake8-bandit: Probable insecure usage of temp file/directory
  "S311", # flake8-bandit: Standard pseudo-random generators are not suitable for security/cryptographic purposes
  "S101", # ruff: Ignore assert warnings on tests
  "RET505", # ruff: Checks for else statements with a return statement in the preceding if block.
  "RET503"  # ruff: Ignore required explicit returns
]
extend-select = [
  "I",   # isort
  "C90", # mccabe complexity
  "B",   # flake8-bugbear
  "PL",  # pycodestyle
  "S",   # flake8-bandit
  "T10", # flake8-debugger
  "PIE", # flake8-pie
  "T20", # flake8-print
  "Q",   # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SLF", # flake8-self
  "SIM", # flake8-simplify
  "ARG", # flake8-unused-arguments
]